<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/tab_documents"
        android:title="@string/tab_documents"
        android:icon="@drawable/ic_documents"/>

    <item
        android:id="@+id/tab_chlellenges"
        android:title="@string/tab_chlellenges"
        android:icon="@drawable/ic_challenges"/>

    <item
        android:id="@+id/tab_central"
        android:title="@string/tab_central"
        android:icon="@drawable/ic_eco"/>

    <item
        android:id="@+id/tab_education"
        android:title="@string/tab_education"
        android:icon="@drawable/ic_education" />

    <item
        android:id="@+id/tab_profile"
        android:title="@string/tab_profile"
        android:icon="@drawable/ic_profile" />

</menu>
