<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/registration_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextPrimary"
            android:textSize="32sp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/registration_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextSecondary"
            android:textSize="18sp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/registration_subtitle"
            android:layout_marginTop="24dp"/>

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edit_text"
            android:maxLines="1"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:layout_marginTop="24dp"
            android:hint="@string/name_hint"
            android:textColorHint="@color/colorTextSecondary"/>

        <EditText
            android:id="@+id/lastname_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edit_text"
            android:maxLines="1"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:layout_marginTop="24dp"
            android:hint="@string/lastname_hint"
            android:textColorHint="@color/colorTextSecondary"/>

        <EditText
            android:id="@+id/mid_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edit_text"
            android:maxLines="1"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:layout_marginTop="24dp"
            android:hint="@string/mid_name_hint"
            android:textColorHint="@color/colorTextSecondary"/>

        <EditText
            android:id="@+id/avatar_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edit_text"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:inputType="text"
            android:maxLines="1"
            android:layout_marginTop="24dp"
            android:hint="@string/avatar_hint"
            android:textColorHint="@color/colorTextSecondary"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registration_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonSolid"
            android:text="@string/registration_button"
            android:layout_marginTop="16dp"
            android:enabled="false"/>

    </LinearLayout>

    <com.example.app_ui.common.view.JTProgressBarColored
        android:id="@+id/registration_pb"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"/>

</LinearLayout>