<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_reading" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/documents_request_finish_title"
            android:textColor="@color/colorTextPrimary"
            android:textSize="32sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/success_description"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/success_button"
            style="@style/ButtonSolid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:text="@string/documents_request_finish_button" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_to_calendar_button"
            style="@style/ButtonEmpty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/success_subscribe_add_to_calendar" />

    </LinearLayout>

</LinearLayout>