<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/login_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="24dp">

        <ImageView
            android:id="@+id/success_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_looking_out"/>

        <TextView
            android:id="@+id/success_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextPrimary"
            android:textSize="32sp"
            android:fontFamily="@font/roboto_bold"
            android:layout_marginTop="14dp"
            android:text="@string/login_title"/>

        <TextView
            android:id="@+id/success_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/login_subtitle"
            android:layout_marginTop="16dp"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/success_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonSolid"
            android:text="@string/login_button"
            android:layout_marginTop="46dp"/>

    </LinearLayout>

    <com.example.app_ui.common.view.JTProgressBarColored
        android:id="@+id/login_pb"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"/>

</LinearLayout>