<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/document_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.example.app_ui.common.view.ToolbarView
            android:id="@+id/document_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/document_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/colorTextPrimary"
            android:padding="24dp"
            android:textSize="24sp"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/document_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorBack"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            android:layout_marginHorizontal="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingVertical="24dp"
                android:textColor="@color/colorTextPrimary"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/documents_open"
                android:gravity="center_vertical"
                android:drawableStart="@drawable/ic_open_document"
                android:drawablePadding="16dp"/>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/colorTextSecondary"
            android:padding="24dp"
            android:textSize="18sp"
            android:text="@string/documents_detail"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/document_sign_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/documents_sign"
            style="@style/ButtonSolid" />

    </LinearLayout>

</LinearLayout>
