<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="vertical"
        app:cardCornerRadius="0dp">
        <LinearLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorBack">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/point_type_title"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="24sp"
                    android:gravity="bottom"
                    android:textStyle="bold"
                    android:layout_marginBottom="16dp"
            />

            <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="@color/colorBorder"
            />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btnMap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:padding="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@color/colorBack"
                    android:paddingEnd="16dp">
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:srcCompat="@drawable/ic_map"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="bottom"
                        android:textColor="@color/colorTextPrimary"
                        android:layout_marginLeft="16dp"
                        android:text="@string/point_type_map"
                        android:textSize="16sp"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btnRoom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:padding="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBack"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:srcCompat="@drawable/ic_none_icon"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="bottom"
                        android:textColor="@color/colorTextPrimary"
                        android:layout_marginLeft="16dp"
                        android:text="@string/point_type_room"
                        android:textSize="16sp"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btnQr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:padding="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBack"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:srcCompat="@drawable/ic_qr_code"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="bottom"
                        android:textColor="@color/colorTextPrimary"
                        android:layout_marginLeft="16dp"
                        android:text="@string/point_type_qr"
                        android:textSize="16sp"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>