<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    android:id="@+id/course_card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="154dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardElevation="8dp"
    app:cardCornerRadius="16dp"
    app:cardBackgroundColor="@color/colorBack"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="8dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/education_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/documents_deadline"
                android:textColor="@color/colorTextSecondary"
                android:fontFamily="@font/roboto_regular"
                android:textSize="14sp"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:background="@drawable/shape_gray_8"/>

            <TextView
                android:id="@+id/education_percent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="30%"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/roboto_regular"
                android:textSize="14sp"
                android:gravity="end"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:layout_marginStart="8dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/education_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="@color/colorTextPrimary"
            android:fontFamily="@font/roboto_regular"
            tools:text="Основы безопасности\nдля новых сотрудников"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/education_important"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/education_important"
                android:textColor="@color/colorTextWhite"
                android:fontFamily="@font/roboto_regular"
                android:textSize="14sp"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:background="@drawable/shape_red_8"/>

            <TextView
                android:id="@+id/education_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/education_new"
                android:textColor="@color/colorTextWhite"
                android:fontFamily="@font/roboto_regular"
                android:textSize="14sp"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/shape_primary_8"/>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>